[IMP] CSS namespacing + fix <ul> css issues
Content can not be namespaced with .odoo-editor as it can be used outside of the
editor. Using "oe-" prefix in class as namespace, instead of a dedicated class,
for checklist & nested.

Same strategy for toolbar: s/.odoo-editor.toolbar/.oe-toolbar

Moving CSS related to the demo page outside of style.css, inside index.html:
When used as a library, youdon't want this CSS

--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,7 @@
-.odoo-editor {
-    box-sizing: border-box;
-}
+/* toolbar styling */
 
-.odoo-editor.toolbar {
+.oe-toolbar {
+    box-sizing: border-box;
     position: absolute;
     visibility: hidden;
     height: fit-content;
@@ -14,7 +13,7 @@
     border-radius: 8px;
     z-index: 1051;
 }
-.odoo-editor.toolbar.toolbar-bottom::before {
+.oe-toolbar.toolbar-bottom::before {
     content: '';
     position: absolute;
     width: 0;
@@ -25,7 +24,7 @@
     border-bottom: #222222 10px solid;
     z-index: 0;
 }
-.odoo-editor.toolbar:not(.toolbar-bottom)::before {
+.oe-toolbar:not(.toolbar-bottom)::before {
     content: '';
     position: absolute;
     width: 0;
@@ -36,150 +35,102 @@
     border-top: #222222 10px solid;
     z-index: -1;
 }
-.odoo-editor.toolbar .button-group {
+.oe-toolbar .button-group {
     display: inline-block;
     margin-right: 13px;
 }
-.odoo-editor.toolbar .button-group:last-of-type {
+.oe-toolbar .button-group:last-of-type {
     margin-right: 0;
 }
-.odoo-editor.toolbar .btn {
+.oe-toolbar .btn {
     position: relative;
     box-sizing: content-box;
     display: inline-block;
     padding: 7px;
     color: white;
 }
-.odoo-editor.toolbar .btn:hover {
+.oe-toolbar .btn:hover {
     background: #868686;
 }
-.odoo-editor .dropdown-menu .btn {
+.oe-toolbar .dropdown-menu .btn {
     background: #222222;
 }
-.odoo-editor.toolbar .btn.active {
+.oe-toolbar .btn.active {
     background: #555555;
 }
-.odoo-editor .tablepicker {
+.oe-toolbar .tablepicker {
     margin: -3px 2px -6px 2px;
     width: max-content;
     width: -webkit-max-content;
 }
-.odoo-editor .tablepicker .tablepicker-row .tablepicker-cell {
+.oe-toolbar .tablepicker .tablepicker-row .tablepicker-cell {
     background: white;
     width: 5px;
     height: 5px;
     margin-right: 3px;
     margin-bottom: 3px;
 }
-.odoo-editor .tablepicker .tablepicker-row .tablepicker-cell:last-of-type {
+.oe-toolbar .tablepicker .tablepicker-row .tablepicker-cell:last-of-type {
     margin-right: 0;
 }
-.odoo-editor .tablepicker .tablepicker-row .tablepicker-cell.active {
+.oe-toolbar .tablepicker .tablepicker-row .tablepicker-cell.active {
     background: #ddeafb;
     border-color: #c3d9ff;
 }
-.odoo-editor .tablepicker-size {
+.oe-toolbar .tablepicker-size {
     margin-top: 7px;
     color: white;
 }
-.odoo-editor .dropdown-toggle {
+.oe-toolbar .dropdown-toggle {
     background: transparent;
     border: none;
     padding: 7px;
 }
-.odoo-editor .dropdown-toggle[aria-expanded="true"] {
+.oe-toolbar .dropdown-toggle[aria-expanded="true"] {
     background: #555555;
 }
-.odoo-editor .dropdown-menu {
+.oe-toolbar .dropdown-menu {
     background: #222222;
     min-width: max-content;
     min-width: -webkit-max-content;
     text-align: center;
 }
-.odoo-editor .dropdown-item {
+.oe-toolbar .dropdown-item {
     background: transparent;
     color: white;
 }
-.odoo-editor .dropdown-item pre,
-.odoo-editor .dropdown-item h1,
-.odoo-editor .dropdown-item h2,
-.odoo-editor .dropdown-item h3,
-.odoo-editor .dropdown-item h4,
-.odoo-editor .dropdown-item h5,
-.odoo-editor .dropdown-item h6,
-.odoo-editor .dropdown-item blockquote {
+.oe-toolbar .dropdown-item pre,
+.oe-toolbar .dropdown-item h1,
+.oe-toolbar .dropdown-item h2,
+.oe-toolbar .dropdown-item h3,
+.oe-toolbar .dropdown-item h4,
+.oe-toolbar .dropdown-item h5,
+.oe-toolbar .dropdown-item h6,
+.oe-toolbar .dropdown-item blockquote {
     margin: 0;
     color: white;
 }
-.odoo-editor li > a.dropdown-item {
+.oe-toolbar li > a.dropdown-item {
     color: white;
 }
-.odoo-editor .dropdown-item:hover, .dropdown-item:focus {
+.oe-toolbar .dropdown-item:hover, .dropdown-item:focus {
     color: white;
     background: #868686;
 }
-.odoo-editor .dropdown-item.active, .dropdown-item:active {
+.oe-toolbar .dropdown-item.active, .dropdown-item:active {
     color: white;
     background: #555555;
 }
 
-.odoo-editor #dom {
-    min-height: 500px;
-    padding: 5px;
-}
-.odoo-editor span.btn {
-    display: inline-block;
-    background-color: blue;
-    padding: 15px;
-    color: white;
-}
-.odoo-editor .mr8 {
-    margin-right: 16px;
-}
-.odoo-editor td {
-    border: 1px solid grey;
-    padding: 6px;
-}
-
-.odoo-editor ul.checklist > li {
-    list-style: none;
-    position: relative;
-    margin-left: 20px;
-}
-.odoo-editor ul.checklist > li:not(.nested):before {
-    content: '';
-    position: absolute;
-    left: -20px;
-    display: block;
-    height: 14px;
-    width: 14px;
-    top: 1px;
-    border: 1px solid;
-    cursor: pointer;
-}
-.odoo-editor ul.checklist > li.checked:after {
-    content: "✓";
-    transition: opacity .5s;
-    position: absolute;
-    left: -18px;
-    top: -1px;
-    opacity: 1;
-}
-.odoo-editor li.nested {
-    display: block;
-}
-
-/* hide color input because it's ugly */
-
-.odoo-editor.toolbar label {
+.oe-toolbar label {
     display: inline-block;
 }
 
-.odoo-editor.toolbar label span {
+.oe-toolbar label span {
     display: inline-block;
 }
 
-.odoo-editor.toolbar input[type="color"] {
+.oe-toolbar input[type="color"] {
     width: 0;
     height: 0;
     padding: 0;
@@ -191,18 +142,48 @@
     margin: 2px 0 0;
 }
 
-.odoo-editor #colorInputButtonGroup label {
+.oe-toolbar #colorInputButtonGroup label {
     margin-bottom: 0;
 }
-.odoo-editor .color-indicator {
+.oe-toolbar .color-indicator {
     background-color: transparent;
     padding-bottom: 4px;
 }
-.odoo-editor .color-indicator.fore-color {
+.oe-toolbar .color-indicator.fore-color {
     border-bottom: 2px solid var(--fore-color);
     padding: 5px;
 }
-.odoo-editor .color-indicator.hilite-color {
+.oe-toolbar .color-indicator.hilite-color {
     border-bottom: 2px solid var(--hilite-color);
     padding: 5px;
 }
+/* Content styling */
+
+ul.oe-checklist > li {
+    list-style: none;
+    position: relative;
+    margin-left: 20px;
+}
+ul.oe-checklist > li:not(.oe-nested):before {
+    content: '';
+    position: absolute;
+    left: -20px;
+    display: block;
+    height: 14px;
+    width: 14px;
+    top: 1px;
+    border: 1px solid;
+    cursor: pointer;
+}
+ul.oe-checklist > li.checked:after {
+    content: "✓";
+    transition: opacity .5s;
+    position: absolute;
+    left: -18px;
+    top: -1px;
+    opacity: 1;
+}
+li.oe-nested {
+    display: block;
+}
+
